tests/Core/positive/lambda-lifting/test1.jvc
def t1 := \g \f f (\x g x);
