tests/Core/negative/test001.jvc
-- division by zero

def f := \x 2 / x;

f 0
